fix: aligned skills types correctly

--- a/src/styles/SkillDiv.scss
+++ b/src/styles/SkillDiv.scss
@@ -9,7 +9,7 @@
     p {
         font-size: 1.25vw;
     }
-    @media screen and (max-width: 768px) {
+    @media screen and (max-width: 1024px) {
         flex-direction: column;
         align-items: flex-start;
         gap: 4px;
