--- a/src/styles/SkillType.scss
+++ b/src/styles/SkillType.scss
@@ -3,7 +3,7 @@
     position: relative;
     left: 15vw;
     top: 0;
-    margin-top: 25svh;
+    margin-top: 20svh;
     h3 {
         position: -webkit-sticky;
         position: sticky;
@@ -12,7 +12,7 @@
         float: left;
         text-align: right;
         letter-spacing: 2px;
-        min-width: 120px;
+        min-width: clamp(120px, 14vw, 14vw);
     }
     ul {
         list-style-type: none;
@@ -24,7 +24,7 @@
         padding-left: 3vw;
     }
 
-    @media screen and (max-width: 768px) {
+    @media screen and (max-width: 1024px) {
         margin-top: 5svh;
         left: 5.5vw;
         h3 {
