--- a/src/styles/Skills.scss
+++ b/src/styles/Skills.scss
@@ -11,7 +11,7 @@
         letter-spacing: 2px;
     }
 
-    @media screen and (max-width: 768px) {
+    @media screen and (max-width: 1024px) {
         margin: 2rem 0;
         h2 {
             left: 5.5vw;
